--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hemanth Kavula | Data Scientist & ML Engineer</title>
     <meta
       name="description"
-      content="Hemanth Chowdary Kavula — Data Science & Machine Learning graduate student at Rowan University. Data Analyst, Data Scientist, ML Engineer."
+      content="Hemanth Chowdary Kavula - Data Science & Machine Learning graduate student at Rowan University. Data Analyst, Data Scientist, ML Engineer."
     />
     <meta name="keywords" content="Hemanth Kavula, Data Scientist, Machine Learning, Data Analyst, Rowan University" />
     <meta name="author" content="Hemanth Kavula" />
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Hemanth Kavula | Data Scientist & ML Engineer" />
     <meta
       property="og:description"
-      content="Portfolio of Hemanth Chowdary Kavula — Data Science & ML graduate student at Rowan University."
+      content="Portfolio of Hemanth Chowdary Kavula - Data Science & ML graduate student at Rowan University."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hemanthkavula.dev" />
@@ -65,3 +65,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
